# mostro-watchdog

./: .dockerignore  .gitignore  BINARY_INSTALLATION.md  CHANGELOG.md  Cargo.toml  DISPUTE_STATUS_ALERTS.md  DOCKER.md  Dockerfile  HEALTH_CHECK.md  PR_STATUS_SUMMARY.md  README.md  RELEASE.md  config.example.toml  docker-compose.yml  install.sh  plan-b-ci-fix.patch  test-install.sh  test_escape.rs
.cargo/: audit.toml
.github/: SETUP.md
.github/workflows/: cargo-release.yml  ci.yml  docker.yml  release.yml
src/: config.rs  db.rs  main.rs
tests/: dispute_status_tests.md
