[package]
name = "mostro-watchdog"
version = "0.1.1"
edition = "2021"
authors = ["MostroP2P"]
description = "Nostr-based notification bot for Mostro administrators. Monitors dispute events and sends real-time Telegram alerts."
license = "MIT"
repository = "https://github.com/MostroP2P/mostro-watchdog"
keywords = ["nostr", "mostro", "telegram", "bot", "notifications"]
categories = ["command-line-utilities"]

[dependencies]
nostr-sdk = "0.37"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
