[package]
name = "mostro-watchdog"
version = "0.1.3"
edition = "2021"
authors = ["MostroP2P"]
description = "Nostr-based notification bot for Mostro administrators. Monitors dispute events and sends real-time Telegram alerts."
license = "MIT"
repository = "https://github.com/MostroP2P/mostro-watchdog"
keywords = ["nostr", "mostro", "telegram", "bot", "notifications"]
categories = ["command-line-utilities"]

[dependencies]
nostr-sdk = "0.37"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"

[package.metadata.release]
# Automatically create and push git tag
tag = true
# Push to origin
push = true  
# Don't publish to crates.io (this is a binary, not a library)
publish = false
# Pre-release hook to ensure tests pass
pre-release-hook = ["cargo", "test"]
# Post-release hook could be used to trigger additional actions
# post-release-hook = ["echo", "Release completed for {{version}}"]
